# nautilus_agents

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  tools.toml
.cargo/: audit.toml
.pre-commit-hooks/: check_anyhow_usage.sh  check_cargo_conventions.sh  check_docs_conventions.sh  check_error_conventions.sh  check_formatting_rs.sh  check_hidden_chars.sh  check_logging_conventions.sh  check_non_latin_text.sh  check_testing_conventions.sh  check_todo_exclamation.sh  check_tokio_usage.sh
examples/: research_workflow.rs  risk_monitoring.rs
src/: action.rs  capability.rs  context.rs  envelope.rs  fixtures.rs  guardrail.rs  intent.rs  lib.rs  lowering.rs  pipeline.rs  policy.rs  recording.rs  replay.rs
src/guardrails/: max_drawdown.rs  mod.rs  order_rate.rs  position_limit.rs
supply-chain/: config.toml
tests/: proptest_serde.proptest-regressions  proptest_serde.rs
