[package]
name = "nautilus-agents"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
authors = ["Nautech Systems <info@nautechsystems.io>"]
license = "LGPL-3.0-or-later"
description = "Agentic infrastructure for the Nautilus trading engine"
documentation = "https://docs.nautilustrader.io"
repository = "https://github.com/nautechsystems/nautilus_agents"
homepage = "https://nautilustrader.io"
categories = ["finance", "simulation", "asynchronous"]
keywords = ["finance", "trading", "agents", "ai", "algorithmic-trading"]
readme = "README.md"

[workspace]

[lib]
name = "nautilus_agents"

[dependencies]
nautilus-common = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "develop" }
nautilus-core = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "develop" }
nautilus-model = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "develop" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
rstest = "0.26"

[lints.rust]
nonstandard_style = { level = "deny" }
