[package]
name = "nautilus-agents"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
authors = ["Nautech Systems <info@nautechsystems.io>"]
license = "LGPL-3.0-or-later"
description = "Open agent protocol for the Nautilus trading engine"
documentation = "https://docs.nautilustrader.io"
repository = "https://github.com/nautechsystems/nautilus_agents"
homepage = "https://nautilustrader.io"
categories = ["finance", "simulation", "asynchronous"]
keywords = ["finance", "trading", "agents", "algorithmic-trading"]
readme = "README.md"

[workspace]

[lib]
name = "nautilus_agents"

[dependencies]
nautilus-common = "0.55.0"
nautilus-core = "0.55.0"
nautilus-model = "0.55.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
rstest = "0.26.1"

[lints.rust]
nonstandard_style = { level = "deny" }

[lints.clippy]
# Debug markers
dbg_macro = "warn"

# Performance optimizations
redundant_clone = "warn"
unnecessary_to_owned = "warn"
inefficient_to_string = "warn"
cloned_instead_of_copied = "warn"

# Needless code
needless_borrow = "warn"
needless_bool = "warn"
needless_borrows_for_generic_args = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_late_init = "warn"
needless_lifetimes = "warn"
needless_match = "warn"
needless_option_as_deref = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_range_loop = "warn"
needless_raw_strings = "warn"
needless_raw_string_hashes = "warn"
needless_return = "warn"
needless_update = "warn"

# Code simplification
redundant_closure = "warn"
collapsible_if = "warn"
collapsible_else_if = "warn"
useless_conversion = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_semicolon = "warn"
unnecessary_sort_by = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_wraps = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
from_iter_instead_of_collect = "warn"
map_identity = "warn"
if_same_then_else = "warn"
get_first = "warn"
single_char_pattern = "warn"
identity_op = "warn"

# Iterator simplifications
manual_flatten = "warn"
iter_kv_map = "warn"
bytes_count_to_len = "warn"
unnecessary_filter_map = "warn"

# Option/Result simplifications
unnecessary_lazy_evaluations = "warn"
option_as_ref_deref = "warn"

# Manual pattern simplifications
manual_filter = "warn"
manual_find = "warn"
manual_while_let_some = "warn"
range_plus_one = "warn"
checked_conversions = "warn"
manual_strip = "warn"
manual_split_once = "warn"
manual_is_ascii_check = "warn"
manual_range_contains = "warn"
manual_string_new = "warn"
manual_instant_elapsed = "warn"

# Pointer casts
ref_as_ptr = "warn"

# Style/idioms
use_self = "warn"
redundant_field_names = "warn"
match_like_matches_macro = "warn"
manual_map = "warn"
bool_to_int_with_if = "warn"
explicit_iter_loop = "warn"
uninlined_format_args = "warn"

# Pedantic (explicitness and clarity)
borrow_as_ptr = "warn"
copy_iterator = "warn"
expl_impl_clone_on_copy = "warn"
inconsistent_struct_constructor = "warn"
iter_nth_zero = "warn"
map_flatten = "warn"
match_bool = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
verbose_bit_mask = "warn"
manual_is_variant_and = "warn"
equatable_if_let = "warn"
manual_assert = "warn"
items_after_statements = "warn"
ignored_unit_patterns = "warn"
if_not_else = "warn"

# Security and robustness
suspicious_doc_comments = "warn"
large_stack_arrays = "warn"
panic_in_result_fn = "warn"

# Explicitly allowed (opinionated lints we disagree with)
redundant_else = "allow"
single_match_else = "allow"
manual_let_else = "allow"
or_fun_call = "allow"
option_if_let_else = "allow"
